--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "parcel src/index.html",
     "prebuild": "npm run clear",
     "build": "parcel build src/index.html --public-url ./",
+    "postbuild": "cp ./CNAME ./dist/CNAME",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d ./dist -b gh-pages",
     "push": "npm run format && git push & npm run deploy",
